# Yaks

./: CMakeLists.txt  README  main.cpp  record.cpp  record.h  record.hpp  rschema.cpp  rschema.h  rschema.hpp  strref.cpp  strref.h  test_factory.cpp  variantType.h  vfactory.cpp  vfactory.h  vfactory.hpp
include/: CMakeLists.txt
include/yaks/: export.hpp  record.h  record.hpp  record.tcc  rschema.hpp  rscope.hpp  strref.hpp  variantType.hpp  version.hpp  vfactory.hpp
src/: CMakeLists.txt  record.cpp  rschema.cpp  rscope.cpp  strref.cpp  vfactory.cpp
test/: CMakeLists.txt  factory.cpp  main.cpp  record.cpp  record_test.cpp  scope.cpp
